--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
+    "docx": "^7.8.0",
+    "file-saver": "^2.0.5",
     "history": "^4.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
