--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
+    "buffer": "^6.0.3",
     "docx": "^7.8.0",
     "file-saver": "^2.0.5",
     "history": "^4.10.1",
