--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "docx": "^7.8.0",
     "file-saver": "^2.0.5",
     "history": "^4.10.1",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
