--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
     "buffer": "^6.0.3",
+    "cors": "^2.8.5",
     "docx": "^7.8.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.18.0",
