--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^9.18.0",
     "history": "^4.10.1",
+    "jszip": "^3.10.1",
     "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
